[gd_scene load_steps=8 format=3 uid="uid://cblqslbuei6ae"]

[ext_resource type="Script" path="res://Scripts/UI/spell_slot.gd" id="1_cr4yf"]
[ext_resource type="Texture2D" uid="uid://ywyctkvaki0l" path="res://Assets/UI/faceset_box.png" id="2_h6nhl"]
[ext_resource type="Script" path="res://Scripts/UI/spell_labels.gd" id="3_7iw1b"]
[ext_resource type="Theme" uid="uid://4rblcssxek5p" path="res://Assets/Themes/theme.tres" id="4_465js"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_60kjb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qbs3g"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.596112, 0, 0.0330134, 1)

[sub_resource type="Theme" id="Theme_lfrm3"]
selected/base_type = &"Button"
selected/styles/hover = SubResource("StyleBoxEmpty_60kjb")
selected/styles/normal = SubResource("StyleBoxFlat_qbs3g")

[node name="SpellSlot" type="VBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cr4yf")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("2_h6nhl")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 6.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="NinePatchRect/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
expand_mode = 2
stretch_mode = 5

[node name="ColorRect" type="ColorRect" parent="NinePatchRect"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 50.0
offset_bottom = 10.0
color = Color(1, 1, 0.266667, 0.498039)

[node name="OnClickButton" type="Button" parent="NinePatchRect"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
theme = SubResource("Theme_lfrm3")

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_7iw1b")

[node name="DamageLabel" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="CooldownLabel" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="ManaLabel" type="Label" parent="NinePatchRect/VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
theme = ExtResource("4_465js")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 6
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="NinePatchRect/OnClickButton" to="." method="_on_on_click_button_mouse_entered"]
[connection signal="mouse_exited" from="NinePatchRect/OnClickButton" to="." method="_on_on_click_button_mouse_exited"]
[connection signal="pressed" from="NinePatchRect/OnClickButton" to="." method="_on_on_click_button_pressed"]
